--- a/app/index.html
+++ b/app/index.html
@@ -3,85 +3,89 @@
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
-  <title>Clear View Escapes</title>
-  <meta name="keywords" content="Travel planning, travel bundles, travel escapes">
-  <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
+  <title>Essenca</title>
+  <meta name="keywords" content="reading, healing, coaching, cursussen">
+  <meta name="description" content="Zicht op de essentie.">
+  <link rel="stylesheet" href="temp/styles/styles.css">
 </head>
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
-    <a href="#">Get in Touch</a>
+    <a>Neem contact op</a>
     <nav>
       <ul>
-        <li><a href="#our-beginning">Our Beginning</a></li>
-        <li><a href="#features">Features</a></li>
-        <li><a href="#testimonials">Testimonials</a></li>
+        <li><a href="#our-beginning">Start</a></li>
+        <li><a href="#contact">Wie ben ik</a></li>
+        <li><a href="#features">Reading</a></li>
+        <li><a href="#features">Healing</a></li>
+        <li><a href="#features">Coaching</a></li>
+        <li><a href="#features">Cursus</a></li>
       </ul>
     </nav>
   </header>
 
-  <div class="large-hero">
-    <img src="assets/images/hero--large.jpg">
-    <h1>Your clarity.</h1>
-    <h2>One trip away.</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
-  </div>
-
-  <div id="our-beginning">
-    <h2>The first trip we planned was our own.</h2>
-    <h3>Ever since, we&rsquo;ve been working to make travel better for everyone.</h3>
-    <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
-    <img src="assets/images/our-start.jpg" alt="Our founder, Jane Doe">
-    <h2>Here&rsquo;s how we got started&hellip;</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <a href="#">quis nostrud exercitation</a> ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <p>Duis aute irure dolor in <strong>reprehenderit in</strong> voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum velit esse cillum <strong>dolore eu fugiat.</strong></p>
-  </div>
-
-  <div id="features">
-    <img src="assets/images/icons/star.svg">
-    <h2>Our Features</h2>
+  <h1>Essenca</h1>
+  <h2>Zicht op de essentie</h2>
+  <p>"Bewustzijn is de voorwaarde voor verandering."</p>
+  <p>--Eckhart Tolle--</p>
   
-    <img src="assets/images/icons/rain.svg">
-    <h3>We&rsquo;ll Watch the Weather</h3>
-    <p>Download our app and we&rsquo;ll send you a notice if it&rsquo;s about to rain in the next 20 minutes around your current location. A good rain can be refreshing, but sometimes you just want to stay dry.</p>
+  <p>tekst</p>
+  <img src="assets/images/first-trip.jpg" alt="Couple walking down a street.">
+  <h2>Heb jij dat ook?</h2>
+  <img src="assets/images/our-start-landscape.jpg alt="Our founder, Jane Doe">
+  <p>dat je je soms verantwoordelijk voelt voor iedereen? Kan of durf je je eigen grenzen niet aan te geven? Loop je vast in werk of relaties? Leg je de lat voor jezelf hoog? Ben je op zoek en weet je niet waarnaar?</p>
 
-    <img src="assets/images/icons/globe.svg">
-    <h3>Global Guides</h3>
-    <p>We&rsquo;ve scoured the entire planet for the best retreats and beautiful vistas. If there&rsquo;s a corner of the world you want to escape to we know the most scenic and inspiring locations.</p>
+  <h2>Maar waarom?</h2>
+  <p>Vaak weten we niet waar onze gevoelens en angsten vandaan komen. Soms zijn we ons niet eens bewust van het feit dat we deze gevoelens hebben. Elk mens ontwikkelt in zijn leven een aantal patronen om met de wereld om zich heen om te kunnen gaan. Door deze patronen kunnen we het contact met ons zelf kwijt raken. Het gevolg kan zijn dat je vermoeid bent en het gevoel hebt dat het leven makkelijker zou kunnen zijn.</p>
+  
+  <p>Ik help je door middel van reading, healing en coaching inzicht te geven in jouw patronen en hun oorsprong. Dit doe ik door contact te maken met je wezen (met wie jij in wezen bent) en energetisch te lezen wat voor jou op dit moment belangrijk is. Blokkades in je energiestroom worden dan inzichtelijk gemaakt.</p>
 
-    <img src="assets/images/icons/wifi.svg">
-    <h3>Wi-Fi Waypoints</h3>
-    <p>We only send you on trips to places we can personally vouch for as being amazing. Which means we&rsquo;ve mapped out where local wi-fi spots are and marked them in our app&rsquo;s map view.</p>
+  <p>Op deze manier is er weer ruimte om terug te komen bij wie je in wezen bent. Oude en belemmerende patronen kunnen worden losgelaten.</p>
 
-    <img src="assets/images/icons/fire.svg">
-    <h3>Survival Kit</h3>
-    <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you to setup a tent, start a fire, scratch your own back and lower your taxes.</p>
-  </div>
+  <h2>Wil je meer weten?</h2>
+  <p>Het kan best spannend zijn een afspraak te maken, zeker als je niet bekend bent met de werkwijze of twijfelt of het wel iets voor jou is. Je kunt altijd contact met me opnemen voor een vrijblijvend gesprek, dan kunnen we samen onderzoeken wat voor jou goed voelt.</p>
 
-  <div id="testimonials">
-    <img src="assets/images/icons/comment.svg">
-    <h2>Real Testimonials</h2>
+  <h2><img src="assets/images/icons/star.svg">Our <strong>Features</strong></h2>
+  <img src="assets/images/icons/rain.svg">
+  <h3>Reading</h3>
+  <p>Tijdens een reading lees ik jouw energie door de niet zichtbare maar wel voelbare wereld bewust waar te nemen en te benoemen. Ik kijk neutraal en met een open hart, zonder oordelen en projecties, naar jouw gedachtenwereld, emoties, ervaringen, energie en je spirituele proces.</p>
+  <h4>Lees meer...</h4>
 
-    <img src="assets/images/testimonial-jane.jpg">
-    <h3>Jane Doe</h3>
-    <h3>9 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+  <img src="assets/images/icons/globe.svg">
+  <h3>Healing</h3>
+  <p>Tijdens een healing stem ik me af op jouw energie en kijk wat er op dit moment nodig is. Soms is er in jouw energie veel energie van anderen aanwezig. Dit kan je belemmeren in het maken van keuzes vanuit jezelf. Onverwerkte of oude emoties en angsten vasthouden blokkeert je energie stroom.</p>
+  <h4>Lees meer...</h4>
 
-    <img src="assets/images/testimonial-john.jpg">
-    <h3>John Smith</h3>
-    <h3>4 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+  <img src="assets/images/icons/wifi.svg">
+  <h3>Coaching</h3>
+  <p>Tijdens een coaching gesprek verhelder je voor jezelf de problemen waar je tegenaan loopt en onderzoek je hoe je hiermee om wilt gaan. Ook onderzoek je je eigen kracht en potentie. Ik kan gebruik maken van reading en healing om je aanvullende inzichten te geven en geef je praktische tips mee.</p>
+  <h4>Lees meer...</h4>
+  
+  <img src="assets/images/icons/fire.svg">
+  <h3 class="feature-item__title">Cursussen</h3>
+  <p>Everytime you book an escape with us we send you a survival kit with the finest materials. The kit will allow you to setup a tent, start a fire, scratch your own back and lower your taxes.</p>
+  <h4>Lees meer...</h4>
 
-    <img src="assets/images/testimonial-cat.jpg">
-    <h3>Cat McKitty</h3>
-    <h3>6 Time Escaper</h3>
-    <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
-  </div>
+  <img src="assets/images/icons/comment.svg">
+  <h2>Wat zeggen anderen</h2>
+
+  <img src="assets/images/testimonial-jane.jpg">
+  <h3>Jane Doe</h3>
+  <h3>9 Time Escaper</h3>
+  <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&rdquo;</p>
+
+  <img src="assets/images/testimonial-john.jpg">
+  <h3>John Smith</h3>
+  <h3>4 Time Escaper</h3>
+  <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur.&rdquo;</p>
+
+  <img src="assets/images/testimonial-cat.jpg">
+  <h3>Cat McKitty</h3>
+  <h3>6 Time Escaper</h3>
+  <p>&ldquo;Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.&rdquo;</p>
 
   <footer>
-    <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a href="#">Get in Touch</a></p>
+    <p>Copyright &copy; 2019 Essenca. All rights reserved. <a href="#">Contact</a></p>
   </footer>
 </body>
 </html>
