--- a/app/index-backup.html
+++ b/app/index-backup.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Essenca</title>
-  <meta name="keywords" content="reading, healing, coaching">
+  <meta name="keywords" content="reading, healing, coaching, cursussen">
   <meta name="description" content="Zicht op de essentie.">
   <link rel="stylesheet" href="temp/styles/styles.css">
 </head>
